--- a/montagem-de-sequências.html
+++ b/montagem-de-sequências.html
@@ -424,6 +424,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <div id="arquivo-.ab1" class="section level3 hasAnchor" number="5.1.4">
 <h3><span class="header-section-number">5.1.4</span> Arquivo .ab1<a href="montagem-de-sequências.html#arquivo-.ab1" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<p>O arquivo <code>.ab1</code> contém o eletroferograma da sequência de DNA, bem como dados brutos e outras informações.</p>
 <p>O arquivo <code>.ab1</code> são gerados pelos sequenciadores da <em>Applied Biosystems</em>. Outros sequenciadores utilizam arquivos nos formatos <code>.scf</code> (<em>Standard Chromatogram Format</em>) e <code>.ztr</code>.</p>
 <p>Dois programas foram desenvolvidos especialmente para visualizar os cromatogramas:</p>
 <ul>
@@ -461,19 +462,20 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <div id="prática" class="section level3 hasAnchor" number="5.1.8">
 <h3><span class="header-section-number">5.1.8</span> Prática<a href="montagem-de-sequências.html#prática" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <ul>
-<li><p>Para essa atividade será preciso baixar o FitchTV.</p></li>
-<li><p>Vamos utilizar os arquivos listados abaixo, que compõem quatro <em>primers</em> sequenciados do marcador molecular pastidial, <em>trnD-trnT</em>, de um organismo desconhecido:</p></li>
-<li><p><code>xx.ab1</code></p></li>
-<li><p><code>yy.ab1</code></p></li>
-<li><p><code>zz.ab1</code></p></li>
-<li><p><code>ww.ab1</code></p></li>
-</ul>
-<p>Siga o passo-a-passo:</p>
+<li><p>Para essa atividade será preciso baixar o <strong>FitchTV</strong>.</p></li>
+<li><p>Vamos abrir alguns arquivos do cromatograma de um organismo desconhecido:</p>
+<ul>
+<li><code>xx.ab1</code></li>
+<li><code>yy.ab1</code></li>
+<li><code>zz.ab1</code></li>
+<li><code>ww.ab1</code></li>
+</ul></li>
+<li><p>Observe o <em>raw data</em> dos cromatogramas:</p>
 <ol style="list-style-type: decimal">
-<li>Abra esses arquivos no programa escolhido.</li>
-<li>Execute a função para realizar a montagem dos <em>primers</em> (<em>assemble</em>).</li>
-<li>Inspecione visualmente a montagem dos <em>primers</em> do início ao fim.</li>
-</ol>
+<li>Clique na aba <code>View</code> -&gt; <code>Raw Data</code>;</li>
+<li>Na janela que se abre, arraste o <code>Horizontal Scale</code> totalmente pra esquerda.</li>
+</ol></li>
+</ul>
 </div>
 </div>
 <div id="alinhamento-de-contigs" class="section level2 hasAnchor" number="5.2">
