--- a/técnicas-moleculares.html
+++ b/técnicas-moleculares.html
@@ -444,12 +444,12 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li><p>Quando um gel é pigmentado com um corante que se liga ao DNA, os fragmentos de DNA podem ser vistos como bandas. Cada banda representa um grupo de fragmentos de DNA de mesmo tamanho.</p></li>
 </ul>
 <p><img src="images/eletroforese1.png" /></p>
-<p>[]{(images/eletroforese2.jpg){width=“400px”}</p>
+<p><img src="images/eletroforese2.jpg" width="400" /></p>
 <ul>
 <li>Para a visualização se utiliza a luz UV de um transiluminador.</li>
 </ul>
 <p><img src="images/luz_uv.jpg" /></p>
-<p>[]{(images/eletroforese.jpg)</p>
+<p><img src="images/eletroforese.jpg" /></p>
 </div>
 <div id="sequenciamento" class="section level2 hasAnchor" number="4.4">
 <h2><span class="header-section-number">4.4</span> Sequenciamento<a href="técnicas-moleculares.html#sequenciamento" class="anchor-section" aria-label="Anchor link to header"></a></h2>
