--- a/montagem-de-sequências.html
+++ b/montagem-de-sequências.html
@@ -492,14 +492,15 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <div id="prática-1" class="section level3 hasAnchor" number="5.2.2">
 <h3><span class="header-section-number">5.2.2</span> Prática<a href="montagem-de-sequências.html#prática-1" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>Para essa atividade será preciso baixar um dos programas que realizam essa tarefa. Contudo, esses programas possuem lincenças pagas. Entretanto, as empresas oferecem um período de teste com todas as funcionalidades ativas. Sugestão para essa atividade: <code>Sequencher</code>, <code>Geneious</code> ou <code>CodonCode Aligner</code>.</p>
-<p>Vamos utilizar os arquivos listados abaixo, que compõem quatro <em>primers</em> sequenciados do marcador molecular pastidial, <em>trnD-trnT</em>, de um organismo desconhecido (<em>species 1</em>):</p>
+<ul>
+<li><p>Vamos utilizar os arquivos listados abaixo, que compõem quatro <em>primers</em> sequenciados do <em>locus</em> <em>trnD-trnT</em> de um organismo desconhecido (<em>species 1</em>):</p>
 <ul>
 <li><a href="./files/ab1/species_1_trnD-T(T).ab1"><code>species_1_trnD-T(T).ab1</code></a></li>
 <li><a href="./files/ab1/species_1_trnD-T(E).ab1"><code>species_1_trnD-T(E).ab1</code></a></li>
 <li><a href="./files/ab1/species_1_trnD-T(Y).ab1"><code>species_1_trnD-T(Y).ab1</code></a></li>
 <li><a href="./files/ab1/species_1_trnD-T(D).ab1"><code>species_1_trnD-T(D).ab1</code></a></li>
-</ul>
-<p>Siga o passo-a-passo:</p>
+</ul></li>
+<li><p>Siga o passo-a-passo:</p>
 <ol style="list-style-type: decimal">
 <li>Abra esses arquivos no programa escolhido.</li>
 <li>Execute a função para realizar a montagem dos <em>primers</em> (<em>assemble</em>).</li>
@@ -507,10 +508,20 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li>Interprete os cromatogramas e as respectivas sequências e edite manualmente os erros encontrados.</li>
 <li>Finalmente, teremos a sequência consenso montada.</li>
 <li>Não deixe de salvar o arquivo da montagem no <code>software</code> utilizado. Após a etapa do alinhamento, o filogeneticista terá de reconferir essas montagens.</li>
-</ol>
-<p>Compare a sua montagem com esta realizada no programa <code>Sequencher</code>:</p>
+</ol></li>
+<li><p>Compare a sua montagem com esta, realizada no programa <code>Sequencher</code>:</p>
 <ul>
 <li><a href="./files/sequencher/species_1_trnD-T.SPF"><code>species_1_trnD-T.SPF</code></a></li>
+</ul></li>
+<li><p>Faça também a montagem do ITS:</p>
+<ul>
+<li><a href="./files/ab1/species_2_ITS(An4).ab1"><code>species_2_ITS(An4).ab1</code></a></li>
+<li><a href="./files/ab1/species_2_ITS(An5).ab1"><code>species_2_ITS(An5).ab1</code></a></li>
+</ul></li>
+<li><p>Compare a sua montagem do ITS com esta, realizada no programa <code>Sequencher</code>:</p>
+<ul>
+<li><a href="./files/ab1/species_2_ITS.SPF"><code>species_2_ITS.SPF</code></a></li>
+</ul></li>
 </ul>
 </div>
 </div>
