--- a/alinhamento-múltiplo-e-manual-de-sequências.html
+++ b/alinhamento-múltiplo-e-manual-de-sequências.html
@@ -379,7 +379,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <div id="alinhamento-múltiplo-e-manual-de-sequências" class="section level1 hasAnchor" number="7">
 <h1><span class="header-section-number">7</span> Alinhamento múltiplo e manual de sequências<a href="alinhamento-múltiplo-e-manual-de-sequências.html#alinhamento-múltiplo-e-manual-de-sequências" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p>O alinhamento múltiplo de sequências é a etapa do reconhecimento das homologias moleculares, isto é, a inferência da homologia primária molecular. Essa etapa pode ser executada através de diversos aplicativos, tais quais: Geneious, BioEdit, CodonCode Aligner.</p>
-<p>Diversos algoritmos são utilizados, como: Clustal, T-Coffee, MergeAlign. O programa Geneious possui um algoritmo próprio que costuma ser muito eficiente.</p>
+<p>Diversos algoritmos são utilizados, como: Clustal, T-Coffee, MergeAlign, Muscle. O programa Geneious possui um algoritmo próprio que costuma ser muito eficiente.</p>
 <p><img src="images/alignment_apps.PNG" /></p>
 <p>Após o alinhamento múltiplo automático de sequências, dá-se início ao alinhamento manual. O alinhamento manual é necessário para garantir um alinhamento perfeito na matriz de dados. Cada coluna representa um caráter homólogo, cuja posição será comparada entre todos os terminais.</p>
 <p>O <code>BioEdit v.7.0.5.3</code> <a name=cite-Hall></a><a href="#bib-Hall">Hall (1999)</a> é um programa <em>open-source</em> bem conhecido para realização do alinhamento manual, mas seu desenvolvimento foi descontinuado. Não obstante, atualmente ainda é bastante utilizado.</p>
