--- a/montagem-de-sequências.html
+++ b/montagem-de-sequências.html
@@ -232,10 +232,11 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="8.1" data-path="codificando-indels.html"><a href="codificando-indels.html#sic"><i class="fa fa-check"></i><b>8.1</b> SIC</a></li>
 <li class="chapter" data-level="8.2" data-path="codificando-indels.html"><a href="codificando-indels.html#mcic"><i class="fa fa-check"></i><b>8.2</b> MCIC</a></li>
+<li class="chapter" data-level="8.3" data-path="codificando-indels.html"><a href="codificando-indels.html#prática-3"><i class="fa fa-check"></i><b>8.3</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="concatenando-matrizes.html"><a href="concatenando-matrizes.html"><i class="fa fa-check"></i><b>9</b> Concatenando matrizes</a>
 <ul>
-<li class="chapter" data-level="9.1" data-path="concatenando-matrizes.html"><a href="concatenando-matrizes.html#prática-3"><i class="fa fa-check"></i><b>9.1</b> Prática</a></li>
+<li class="chapter" data-level="9.1" data-path="concatenando-matrizes.html"><a href="concatenando-matrizes.html#prática-4"><i class="fa fa-check"></i><b>9.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="10" data-path="seleção-de-modelos-das-partições.html"><a href="seleção-de-modelos-das-partições.html"><i class="fa fa-check"></i><b>10</b> Seleção de modelos das partições</a></li>
 <li class="chapter" data-level="11" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html"><i class="fa fa-check"></i><b>11</b> Softwares para análises filogenéticas</a>
@@ -243,20 +244,20 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="11.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#ms-dos"><i class="fa fa-check"></i><b>11.1</b> MS-DOS</a></li>
 <li class="chapter" data-level="11.2" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#iq-tree"><i class="fa fa-check"></i><b>11.2</b> IQ-TREE</a>
 <ul>
-<li class="chapter" data-level="11.2.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-4"><i class="fa fa-check"></i><b>11.2.1</b> Prática</a></li>
+<li class="chapter" data-level="11.2.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-5"><i class="fa fa-check"></i><b>11.2.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="11.3" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#splitstree6"><i class="fa fa-check"></i><b>11.3</b> SplitsTree6</a>
 <ul>
-<li class="chapter" data-level="11.3.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-5"><i class="fa fa-check"></i><b>11.3.1</b> Prática</a></li>
+<li class="chapter" data-level="11.3.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-6"><i class="fa fa-check"></i><b>11.3.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="11.4" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#mrbayes"><i class="fa fa-check"></i><b>11.4</b> MrBayes</a>
 <ul>
-<li class="chapter" data-level="11.4.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-6"><i class="fa fa-check"></i><b>11.4.1</b> Prática</a></li>
+<li class="chapter" data-level="11.4.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-7"><i class="fa fa-check"></i><b>11.4.1</b> Prática</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="12" data-path="edição-final-de-árvore.html"><a href="edição-final-de-árvore.html"><i class="fa fa-check"></i><b>12</b> Edição final de árvore</a>
 <ul>
-<li class="chapter" data-level="12.1" data-path="edição-final-de-árvore.html"><a href="edição-final-de-árvore.html#prática-7"><i class="fa fa-check"></i><b>12.1</b> Prática</a></li>
+<li class="chapter" data-level="12.1" data-path="edição-final-de-árvore.html"><a href="edição-final-de-árvore.html#prática-8"><i class="fa fa-check"></i><b>12.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="13" data-path="árvores-filogenéticas-das-plantas.html"><a href="árvores-filogenéticas-das-plantas.html"><i class="fa fa-check"></i><b>13</b> Árvores filogenéticas das plantas</a></li>
 <li class="chapter" data-level="14" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html"><i class="fa fa-check"></i><b>14</b> Introdução ao R</a>
@@ -276,7 +277,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="14.7.2" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#funções-básicas"><i class="fa fa-check"></i><b>14.7.2</b> Funções básicas</a></li>
 </ul></li>
 <li class="chapter" data-level="14.8" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#pacotes"><i class="fa fa-check"></i><b>14.8</b> Pacotes</a></li>
-<li class="chapter" data-level="14.9" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#prática-8"><i class="fa fa-check"></i><b>14.9</b> Prática</a>
+<li class="chapter" data-level="14.9" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#prática-9"><i class="fa fa-check"></i><b>14.9</b> Prática</a>
 <ul>
 <li class="chapter" data-level="14.9.1" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#indexação-de-objetos"><i class="fa fa-check"></i><b>14.9.1</b> Indexação de objetos</a></li>
 <li class="chapter" data-level="14.9.2" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#operadores-de-lógica"><i class="fa fa-check"></i><b>14.9.2</b> Operadores de lógica</a></li>
@@ -378,7 +379,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
             <section class="normal" id="section-">
 <div id="montagem-de-sequências" class="section level1 hasAnchor" number="5">
 <h1><span class="header-section-number">5</span> Montagem de sequências<a href="montagem-de-sequências.html#montagem-de-sequências" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<p>A primeira etapa computacional de uma análise filogenética é a montagem das sequências (sequence assembly) de cada um dos terminais a partir dos cromatogramas de cada <em>primer</em> sequenciado.</p>
+<p>A primeira etapa computacional de uma análise filogenética é a montagem das sequências (<em>sequence assembly</em>) de cada um dos terminais a partir dos cromatogramas de cada <em>primer</em> sequenciado.</p>
 <div id="cromatogramas" class="section level2 hasAnchor" number="5.1">
 <h2><span class="header-section-number">5.1</span> Cromatogramas<a href="montagem-de-sequências.html#cromatogramas" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><img src="images/cromatograma.png" /></p>
@@ -428,7 +429,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <p>O arquivo <code>.ab1</code> são gerados pelos sequenciadores da <em>Applied Biosystems</em>. Outros sequenciadores utilizam arquivos nos formatos <code>.scf</code> (<em>Standard Chromatogram Format</em>) e <code>.ztr</code>.</p>
 <p>Dois programas foram desenvolvidos especialmente para visualizar os cromatogramas:</p>
 <ul>
-<li><a href="http://technelysium.com.au/wp/chromas">Chromas</a> FitchTV</li>
+<li><a href="http://technelysium.com.au/wp/chromas">Chromas</a></li>
 <li><a href="https://finchtv.software.informer.com/1.4">FinchTV</a></li>
 </ul>
 </div>
@@ -446,7 +447,8 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <div id="manual-do-sequenciamento-sanger" class="section level3 hasAnchor" number="5.1.6">
 <h3><span class="header-section-number">5.1.6</span> Manual do sequenciamento Sanger<a href="montagem-de-sequências.html#manual-do-sequenciamento-sanger" class="anchor-section" aria-label="Anchor link to header"></a></h3>
-<p>Diversos fatores podem resultar em baixa resolução do sinal. Observe o capítulo 8 (<em>Troubleshooting</em>) do guia da <em>Applied Biosystems</em> para entender alguns dos principais problemas no sequenciamento: <a href="https://www.ramaciotti.unsw.edu.au/sites/default/files/2019-04/sequencing_handbook_FLR.pdf">DNA Sequencing by Capillary Electrophoresis 3ed</a>.</p>
+<p>Diversos fatores podem resultar em baixa resolução do sinal. Observe o capítulo 8 (<em>Troubleshooting</em>) do guia da <em>Applied Biosystems</em> para entender alguns dos principais problemas no sequenciamento:</p>
+<p><a href="https://www.ramaciotti.unsw.edu.au/sites/default/files/2019-04/sequencing_handbook_FLR.pdf">DNA Sequencing by Capillary Electrophoresis 3ed</a>.</p>
 <div class="shareagain" style="min-width:300px;margin:1em auto;" data-exeternal="1">
 <iframe src="https://www.ramaciotti.unsw.edu.au/sites/default/files/2019-04/sequencing_handbook_FLR.pdf" width="400" height="200" style="border:2px solid currentColor;" loading="lazy" allowfullscreen></iframe>
 <script>fitvids('.shareagain', {players: 'iframe'});</script>
@@ -456,7 +458,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <h3><span class="header-section-number">5.1.7</span> Interpretação do cromatograma<a href="montagem-de-sequências.html#interpretação-do-cromatograma" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>O processo automatizado de detecção de <em>contigs</em> através do algoritmo <em>base calling</em> de um software é sujeito à erros. E não é raro ocorrerem. Isso deve-se à baixa qualidade do sinal em certas regiões do cromatograma. A qualidade do sinal varia em função de inúmeros fatores e, geralmente, está relacionada à etapa das reações de sequenciamento. Compostos secundários, concentração inadequada de DNA amplificado, presença de contaminantes ou impurezas, ou qualquer outra razão misteriosa, pode atrapalhar as reações de sequenciamento, levando a uma baixa qualidade do sinal. Portanto, o filogeneticista precisa revisar visualmente e manualmente toda a sequência montada automaticamente por um software. Ademais, também é da própria natureza da tecnologia de sequenciamento Sanger, que a qualidade e resolução do sinal começa baixa, mas vai gradativamente melhorando a partir do início da reação, porém começa a decair após um determinado ponto. Consequentemente, a depender da qualidade do cromatograma, a duração dessa etapa é variável.</p>
 <p>Após o alinhamento múltiplo das sequências, é preciso reconferir os cromatogramas das sequências montadas. Por isso, é fundamental salvá-las no <em>software</em> utilizado. Cada <em>software</em> salvará como um arquivo específico, que não pode ser lido por outros programas. A tarefa de reconferir as montagens após o alinhamento múltiplo é trabalhosa, mas essencial para a correta codificação das homologias moleculares, uma vez que nem sempre e nem em todas os <code>loci</code> apresentam uma resolução inequívoca.</p>
-<p>O código de ambiguidade de nucleotídeos foi estabelecido pela IUPAC durante o Comitê de Nomenclatura da União Internacional de Bioquímica (NC-IUB), em 1984 <a name=cite-Cornish-Bowden></a><a href="https://doi.org/10.1093/nar/13.9.3021">Cornish-Bowden (1985)</a>.</p>
+<p>O código de ambiguidade de nucleotídeos foi estabelecido pela IUPAC durante o Comitê de Nomenclatura da União Internacional de Bioquímica (NC-IUB), em 1984 <a name=cite-Cornish-Bowden></a>(<a href="https://doi.org/10.1093/nar/13.9.3021">Cornish-Bowden, 1985</a>).</p>
 <p><img src="images/iupac.png" /></p>
 </div>
 <div id="prática" class="section level3 hasAnchor" number="5.1.8">
