--- a/softwares-para-análises-filogenéticas.html
+++ b/softwares-para-análises-filogenéticas.html
@@ -232,10 +232,11 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="8.1" data-path="codificando-indels.html"><a href="codificando-indels.html#sic"><i class="fa fa-check"></i><b>8.1</b> SIC</a></li>
 <li class="chapter" data-level="8.2" data-path="codificando-indels.html"><a href="codificando-indels.html#mcic"><i class="fa fa-check"></i><b>8.2</b> MCIC</a></li>
+<li class="chapter" data-level="8.3" data-path="codificando-indels.html"><a href="codificando-indels.html#prática-3"><i class="fa fa-check"></i><b>8.3</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="concatenando-matrizes.html"><a href="concatenando-matrizes.html"><i class="fa fa-check"></i><b>9</b> Concatenando matrizes</a>
 <ul>
-<li class="chapter" data-level="9.1" data-path="concatenando-matrizes.html"><a href="concatenando-matrizes.html#prática-3"><i class="fa fa-check"></i><b>9.1</b> Prática</a></li>
+<li class="chapter" data-level="9.1" data-path="concatenando-matrizes.html"><a href="concatenando-matrizes.html#prática-4"><i class="fa fa-check"></i><b>9.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="10" data-path="seleção-de-modelos-das-partições.html"><a href="seleção-de-modelos-das-partições.html"><i class="fa fa-check"></i><b>10</b> Seleção de modelos das partições</a></li>
 <li class="chapter" data-level="11" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html"><i class="fa fa-check"></i><b>11</b> Softwares para análises filogenéticas</a>
@@ -243,20 +244,20 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="11.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#ms-dos"><i class="fa fa-check"></i><b>11.1</b> MS-DOS</a></li>
 <li class="chapter" data-level="11.2" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#iq-tree"><i class="fa fa-check"></i><b>11.2</b> IQ-TREE</a>
 <ul>
-<li class="chapter" data-level="11.2.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-4"><i class="fa fa-check"></i><b>11.2.1</b> Prática</a></li>
+<li class="chapter" data-level="11.2.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-5"><i class="fa fa-check"></i><b>11.2.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="11.3" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#splitstree6"><i class="fa fa-check"></i><b>11.3</b> SplitsTree6</a>
 <ul>
-<li class="chapter" data-level="11.3.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-5"><i class="fa fa-check"></i><b>11.3.1</b> Prática</a></li>
+<li class="chapter" data-level="11.3.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-6"><i class="fa fa-check"></i><b>11.3.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="11.4" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#mrbayes"><i class="fa fa-check"></i><b>11.4</b> MrBayes</a>
 <ul>
-<li class="chapter" data-level="11.4.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-6"><i class="fa fa-check"></i><b>11.4.1</b> Prática</a></li>
+<li class="chapter" data-level="11.4.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-7"><i class="fa fa-check"></i><b>11.4.1</b> Prática</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="12" data-path="edição-final-de-árvore.html"><a href="edição-final-de-árvore.html"><i class="fa fa-check"></i><b>12</b> Edição final de árvore</a>
 <ul>
-<li class="chapter" data-level="12.1" data-path="edição-final-de-árvore.html"><a href="edição-final-de-árvore.html#prática-7"><i class="fa fa-check"></i><b>12.1</b> Prática</a></li>
+<li class="chapter" data-level="12.1" data-path="edição-final-de-árvore.html"><a href="edição-final-de-árvore.html#prática-8"><i class="fa fa-check"></i><b>12.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="13" data-path="árvores-filogenéticas-das-plantas.html"><a href="árvores-filogenéticas-das-plantas.html"><i class="fa fa-check"></i><b>13</b> Árvores filogenéticas das plantas</a></li>
 <li class="chapter" data-level="14" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html"><i class="fa fa-check"></i><b>14</b> Introdução ao R</a>
@@ -276,7 +277,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="14.7.2" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#funções-básicas"><i class="fa fa-check"></i><b>14.7.2</b> Funções básicas</a></li>
 </ul></li>
 <li class="chapter" data-level="14.8" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#pacotes"><i class="fa fa-check"></i><b>14.8</b> Pacotes</a></li>
-<li class="chapter" data-level="14.9" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#prática-8"><i class="fa fa-check"></i><b>14.9</b> Prática</a>
+<li class="chapter" data-level="14.9" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#prática-9"><i class="fa fa-check"></i><b>14.9</b> Prática</a>
 <ul>
 <li class="chapter" data-level="14.9.1" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#indexação-de-objetos"><i class="fa fa-check"></i><b>14.9.1</b> Indexação de objetos</a></li>
 <li class="chapter" data-level="14.9.2" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#operadores-de-lógica"><i class="fa fa-check"></i><b>14.9.2</b> Operadores de lógica</a></li>
@@ -463,8 +464,8 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li><p>A primeira versão foi lançada em 2011. O IQ-Tree é o sucessor dos softwares IQPNNI (desde 2004) e do TREE-PUZZLE (desde 1995).</p></li>
 </ul>
 <p><img src="images/IqtreeContributors.PNG" /></p>
-<div id="prática-4" class="section level3 hasAnchor" number="11.2.1">
-<h3><span class="header-section-number">11.2.1</span> Prática<a href="softwares-para-análises-filogenéticas.html#prática-4" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<div id="prática-5" class="section level3 hasAnchor" number="11.2.1">
+<h3><span class="header-section-number">11.2.1</span> Prática<a href="softwares-para-análises-filogenéticas.html#prática-5" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <ul>
 <li>Vamos testar o IQ-TREE utilizando o exemplo embutido no programa:</li>
 </ul>
@@ -525,8 +526,8 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <div id="splitstree6" class="section level2 hasAnchor" number="11.3">
 <h2><span class="header-section-number">11.3</span> SplitsTree6<a href="softwares-para-análises-filogenéticas.html#splitstree6" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<div id="prática-5" class="section level3 hasAnchor" number="11.3.1">
-<h3><span class="header-section-number">11.3.1</span> Prática<a href="softwares-para-análises-filogenéticas.html#prática-5" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<div id="prática-6" class="section level3 hasAnchor" number="11.3.1">
+<h3><span class="header-section-number">11.3.1</span> Prática<a href="softwares-para-análises-filogenéticas.html#prática-6" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <ul>
 <li><p>O arquivo <code>.splits.nex</code> gerado pelo <code>IQ-TREE</code> pode ser carregado pelo <a href="https://software-ab.informatik.uni-tuebingen.de/download/splitstree4/welcome.html">SplitsTree4</a> <a name=cite-Huson></a>(<a href="https://doi.org/10.1093/molbev/msj030">Huson and Bryant, 2005</a>), um programa com interface gráfica com usuário e simples de usar.</p></li>
 <li><p>Diferentemente das árvores filogenéticas, as redes filogenéticas conseguem representar as incongruências e incertezas do conjunto total de árvores obtidas na análise filogenética, e são produzidas a partir de métodos de distância específicos. Trata-se de uma ferramenta exploratória interessante que tem sido utilizada até mesmo fora do campo da biologia comparativa.</p></li>
@@ -541,8 +542,8 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 </ul>
 <p><img src="images/MrBayes.jpg" />
 - O ideal é manter o arquivo da matriz de dados a ser analisada no mesmo diretório do MrBayes.</p>
-<div id="prática-6" class="section level3 hasAnchor" number="11.4.1">
-<h3><span class="header-section-number">11.4.1</span> Prática<a href="softwares-para-análises-filogenéticas.html#prática-6" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<div id="prática-7" class="section level3 hasAnchor" number="11.4.1">
+<h3><span class="header-section-number">11.4.1</span> Prática<a href="softwares-para-análises-filogenéticas.html#prática-7" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <ul>
 <li><p>Abra o MrBayes e execute os comandos abaixo:</p>
 <div style="color: black; background: lightblue; text-align: justify; border: 5px outset lightgray; padding: 10px;">
