--- a/edição-final-de-árvore.html
+++ b/edição-final-de-árvore.html
@@ -232,10 +232,11 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="8.1" data-path="codificando-indels.html"><a href="codificando-indels.html#sic"><i class="fa fa-check"></i><b>8.1</b> SIC</a></li>
 <li class="chapter" data-level="8.2" data-path="codificando-indels.html"><a href="codificando-indels.html#mcic"><i class="fa fa-check"></i><b>8.2</b> MCIC</a></li>
+<li class="chapter" data-level="8.3" data-path="codificando-indels.html"><a href="codificando-indels.html#prática-3"><i class="fa fa-check"></i><b>8.3</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="concatenando-matrizes.html"><a href="concatenando-matrizes.html"><i class="fa fa-check"></i><b>9</b> Concatenando matrizes</a>
 <ul>
-<li class="chapter" data-level="9.1" data-path="concatenando-matrizes.html"><a href="concatenando-matrizes.html#prática-3"><i class="fa fa-check"></i><b>9.1</b> Prática</a></li>
+<li class="chapter" data-level="9.1" data-path="concatenando-matrizes.html"><a href="concatenando-matrizes.html#prática-4"><i class="fa fa-check"></i><b>9.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="10" data-path="seleção-de-modelos-das-partições.html"><a href="seleção-de-modelos-das-partições.html"><i class="fa fa-check"></i><b>10</b> Seleção de modelos das partições</a></li>
 <li class="chapter" data-level="11" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html"><i class="fa fa-check"></i><b>11</b> Softwares para análises filogenéticas</a>
@@ -243,20 +244,20 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="11.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#ms-dos"><i class="fa fa-check"></i><b>11.1</b> MS-DOS</a></li>
 <li class="chapter" data-level="11.2" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#iq-tree"><i class="fa fa-check"></i><b>11.2</b> IQ-TREE</a>
 <ul>
-<li class="chapter" data-level="11.2.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-4"><i class="fa fa-check"></i><b>11.2.1</b> Prática</a></li>
+<li class="chapter" data-level="11.2.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-5"><i class="fa fa-check"></i><b>11.2.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="11.3" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#splitstree6"><i class="fa fa-check"></i><b>11.3</b> SplitsTree6</a>
 <ul>
-<li class="chapter" data-level="11.3.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-5"><i class="fa fa-check"></i><b>11.3.1</b> Prática</a></li>
+<li class="chapter" data-level="11.3.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-6"><i class="fa fa-check"></i><b>11.3.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="11.4" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#mrbayes"><i class="fa fa-check"></i><b>11.4</b> MrBayes</a>
 <ul>
-<li class="chapter" data-level="11.4.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-6"><i class="fa fa-check"></i><b>11.4.1</b> Prática</a></li>
+<li class="chapter" data-level="11.4.1" data-path="softwares-para-análises-filogenéticas.html"><a href="softwares-para-análises-filogenéticas.html#prática-7"><i class="fa fa-check"></i><b>11.4.1</b> Prática</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="12" data-path="edição-final-de-árvore.html"><a href="edição-final-de-árvore.html"><i class="fa fa-check"></i><b>12</b> Edição final de árvore</a>
 <ul>
-<li class="chapter" data-level="12.1" data-path="edição-final-de-árvore.html"><a href="edição-final-de-árvore.html#prática-7"><i class="fa fa-check"></i><b>12.1</b> Prática</a></li>
+<li class="chapter" data-level="12.1" data-path="edição-final-de-árvore.html"><a href="edição-final-de-árvore.html#prática-8"><i class="fa fa-check"></i><b>12.1</b> Prática</a></li>
 </ul></li>
 <li class="chapter" data-level="13" data-path="árvores-filogenéticas-das-plantas.html"><a href="árvores-filogenéticas-das-plantas.html"><i class="fa fa-check"></i><b>13</b> Árvores filogenéticas das plantas</a></li>
 <li class="chapter" data-level="14" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html"><i class="fa fa-check"></i><b>14</b> Introdução ao R</a>
@@ -276,7 +277,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="14.7.2" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#funções-básicas"><i class="fa fa-check"></i><b>14.7.2</b> Funções básicas</a></li>
 </ul></li>
 <li class="chapter" data-level="14.8" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#pacotes"><i class="fa fa-check"></i><b>14.8</b> Pacotes</a></li>
-<li class="chapter" data-level="14.9" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#prática-8"><i class="fa fa-check"></i><b>14.9</b> Prática</a>
+<li class="chapter" data-level="14.9" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#prática-9"><i class="fa fa-check"></i><b>14.9</b> Prática</a>
 <ul>
 <li class="chapter" data-level="14.9.1" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#indexação-de-objetos"><i class="fa fa-check"></i><b>14.9.1</b> Indexação de objetos</a></li>
 <li class="chapter" data-level="14.9.2" data-path="introdução-ao-r.html"><a href="introdução-ao-r.html#operadores-de-lógica"><i class="fa fa-check"></i><b>14.9.2</b> Operadores de lógica</a></li>
@@ -380,8 +381,8 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <h1><span class="header-section-number">12</span> Edição final de árvore<a href="edição-final-de-árvore.html#edição-final-de-árvore" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p>Há uma gama muito grande de <em>softwares</em> que editam árvores filogenéticas. O programa <code>FigTree</code> possui interface amigável com usuário e com ele é possível editar árvores publicáveis. Outros programas que possuem interface gráfica com usuário são: <a href="http://dendroscope.org">Dendroscope</a> e o <a href="https://www.mesquiteproject.org">Mesquite</a> (que possui diversas funcionalidades voltadas para filogenias).</p>
 <p>No presente curso aprenderemos a editar árvores usando o <a href="https://www.r-project.org"><svg aria-hidden="true" role="img" viewBox="0 0 581 512" style="height:1em;width:1.13em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:steelblue;overflow:visible;position:relative;"><path d="M581 226.6C581 119.1 450.9 32 290.5 32S0 119.1 0 226.6C0 322.4 103.3 402 239.4 418.1V480h99.1v-61.5c24.3-2.7 47.6-7.4 69.4-13.9L448 480h112l-67.4-113.7c54.5-35.4 88.4-84.9 88.4-139.7zm-466.8 14.5c0-73.5 98.9-133 220.8-133s211.9 40.7 211.9 133c0 50.1-26.5 85-70.3 106.4-2.4-1.6-4.7-2.9-6.4-3.7-10.2-5.2-27.8-10.5-27.8-10.5s86.6-6.4 86.6-92.7-90.6-87.9-90.6-87.9h-199V361c-74.1-21.5-125.2-67.1-125.2-119.9zm225.1 38.3v-55.6c57.8 0 87.8-6.8 87.8 27.3 0 36.5-38.2 28.3-87.8 28.3zm-.9 72.5H365c10.8 0 18.9 11.7 24 19.2-16.1 1.9-33 2.8-50.6 2.9v-22.1z"/></svg></a>, cujas possibilidades e funcionalidades superam hoje qualquer <em>software</em> com interface gráfica.</p>
-<div id="prática-7" class="section level2 hasAnchor" number="12.1">
-<h2><span class="header-section-number">12.1</span> Prática<a href="edição-final-de-árvore.html#prática-7" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="prática-8" class="section level2 hasAnchor" number="12.1">
+<h2><span class="header-section-number">12.1</span> Prática<a href="edição-final-de-árvore.html#prática-8" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>Nessa etapa, vamos utilizar o programa o <code>FigTree</code> para, em seguida, aprendermos o básico do <a href="https://www.r-project.org"><svg aria-hidden="true" role="img" viewBox="0 0 581 512" style="height:1em;width:1.13em;vertical-align:-0.125em;margin-left:auto;margin-right:auto;font-size:inherit;fill:steelblue;overflow:visible;position:relative;"><path d="M581 226.6C581 119.1 450.9 32 290.5 32S0 119.1 0 226.6C0 322.4 103.3 402 239.4 418.1V480h99.1v-61.5c24.3-2.7 47.6-7.4 69.4-13.9L448 480h112l-67.4-113.7c54.5-35.4 88.4-84.9 88.4-139.7zm-466.8 14.5c0-73.5 98.9-133 220.8-133s211.9 40.7 211.9 133c0 50.1-26.5 85-70.3 106.4-2.4-1.6-4.7-2.9-6.4-3.7-10.2-5.2-27.8-10.5-27.8-10.5s86.6-6.4 86.6-92.7-90.6-87.9-90.6-87.9h-199V361c-74.1-21.5-125.2-67.1-125.2-119.9zm225.1 38.3v-55.6c57.8 0 87.8-6.8 87.8 27.3 0 36.5-38.2 28.3-87.8 28.3zm-.9 72.5H365c10.8 0 18.9 11.7 24 19.2-16.1 1.9-33 2.8-50.6 2.9v-22.1z"/></svg></a> e seus pacotes de filogenia.</p>
 <p>Abra as árvores obtidas nas análises filogenéticas previamente executadas com o <a href="http://tree.bio.ed.ac.uk/software/figtree/">FigTree</a> e experimente as possibilidades de edição.</p>
 </div>
