--- a/montagem-de-sequências.html
+++ b/montagem-de-sequências.html
@@ -478,6 +478,8 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li>Na janela que se abre, arraste o <code>Horizontal Scale</code> totalmente pra esquerda.</li>
 </ol></li>
 </ul>
+<p><br></p>
+<p>Há arquivos <code>.ab1</code> nesse site: <a href="https://www.vanderbilt.edu/wolbachiaproject/lab-5-dna-sequences">https://www.vanderbilt.edu/wolbachiaproject/lab-5-dna-sequences</a>.</p>
 </div>
 </div>
 <div id="alinhamento-de-contigs" class="section level2 hasAnchor" number="5.2">
@@ -528,6 +530,8 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li><a href="./files/ab1/species_2_ITS.SPF"><code>species_2_ITS.SPF</code></a></li>
 </ul></li>
 </ul>
+<p><br></p>
+<p>Monte as sequências usando os arquivos <code>.ab1</code> em: <a href="https://www.vanderbilt.edu/wolbachiaproject/lab-5-dna-sequences">https://www.vanderbilt.edu/wolbachiaproject/lab-5-dna-sequences</a>.</p>
 </div>
 </div>
 </div>
