--- a/técnicas-moleculares.html
+++ b/técnicas-moleculares.html
@@ -449,7 +449,8 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li>Para a visualização se utiliza a luz UV de um transiluminador.</li>
 </ul>
-<p><img src="images/luz_uv.jpg" /></p>
+<p><img src="images/luz_uv.jpg" />
+A concentração da amostra é crucial para o sucesso da reação de sequencimento. Usar muito pouco DNA é um erro que leva a nenhum sinal ou a sinais fracos, mas usar muito é um erro também!</p>
 <p><img src="images/eletroforese.jpg" /></p>
 </div>
 <div id="sequenciamento" class="section level2 hasAnchor" number="4.4">
