--- a/referências.html
+++ b/referências.html
@@ -380,7 +380,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <div id="referências" class="section level1 unnumbered hasAnchor">
 <h1>Referências<a href="referências.html#referências" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p><a name=bib-Almeida_2002></a><a href="#cite-Almeida_2002">Almeida, M.</a> (2002).
-“Uma introdu{c”{~ao ao XML, sua utiliza{cc{~ao na Internet e alguns
+“Uma introdu{c”c~ao ao XML, sua utiliza{cc~ao na Internet e alguns
 conceitos complementares. In: _Ci. Inf., Bras{’_ilia 31.2, pp. 5-13.</p>
 <p><a
 name=bib-TrendsandPriorities></a><a href="#cite-TrendsandPriorities">Anônimo</a>
@@ -470,8 +470,8 @@ flowering plant families”. In: <em>BMC Biology</em> 19.1. DOI:
 URL:
 <a href="https://doi.org/10.1186/s12915-021-01166-2">https://doi.org/10.1186/s12915-021-01166-2</a>.</p>
 <p><a name=bib-Luz2014></a><a href="#cite-Luz2014">Luz, M. T.</a> (2014). “Impactos
-da tecnociência nos saberes, na cultura da vida e saúde1”. In: <em>Forum
-Sociológico</em>, pp. 27-32. DOI:
+da tecnociência nos saberes, na cultura da vida e saúde”. In: <em>Forum
+Sociológico</em> 24, pp. 27-32. DOI:
 <a href="https://doi.org/10.4000%2Fsociologico.1007">10.4000/sociologico.1007</a>.
 URL:
 <a href="https://doi.org/10.4000/sociologico.1007">https://doi.org/10.4000/sociologico.1007</a>.</p>
@@ -500,8 +500,8 @@ eprint:
 URL:
 <a href="https://doi.org/10.1093/bioinformatics/btg131">https://doi.org/10.1093/bioinformatics/btg131</a>.</p>
 <p><a name=bib-ePING></a><a href="#cite-ePING">Programa de Governo Eletr{^onico
-Brasileiro</a> (2022). _Padr{~_oes de Interoperabilidade de
-Governo Eletr{^onico - ePING - Vers{~ao 2018. [Online; accessed
+Brasileiro</a> (2022). <em>PadrÃµes de Interoperabilidade de
+Governo EletrÃ´nico - ePING - VersÃ£o 2018</em>. [Online; accessed
 13-September-2022]. URL:
 <a href="https://eping.governoeletronico.gov.br">https://eping.governoeletronico.gov.br</a>.</p>
 <p><a name=bib-Sanderson></a><a href="#cite-Sanderson">Sanderson, M. J., B. G. Baldwin, G.
@@ -513,10 +513,30 @@ eprint:
 <a href="https://academic.oup.com/sysbio/article-pdf/42/4/562/4662342/42-4-562.pdf" class="uri">https://academic.oup.com/sysbio/article-pdf/42/4/562/4662342/42-4-562.pdf</a>.
 URL:
 <a href="https://doi.org/10.1093/sysbio/42.4.562">https://doi.org/10.1093/sysbio/42.4.562</a>.</p>
+<p><a name=bib-Santos2008></a><a href="#cite-Santos2008">Santos, C. M. D.</a> (2008).
+“Os dinossauros de Hennig: sobre a importância do monofiletismo para a
+sistemática biol'gica”. In: <em>Scientiae Studia [online]</em> 2.6, pp.
+179-200. DOI:
+<a href="https://doi.org/10.4000%2Fsociologico.1007">10.4000/sociologico.1007</a>.
+URL:
+<a href="https://doi.org/10.1590/S1678-31662008000200003">https://doi.org/10.1590/S1678-31662008000200003</a>.</p>
+<p><a name=bib-Santos_Klassa2012></a><a href="#cite-Santos_Klassa2012">Santos, C. M. D. and B.
+Klassa</a> (2012). “Sistem'atica filogen'etica
+hennigiana: revolu{c”c~ao ou mudan{cca no interior de um paradigma?
+In: <em>Scientiae Studia [online]</em> 10.3, pp. 593-612. DOI:
+<a href="https://doi.org/10.4000%2Fsociologico.1007">10.4000/sociologico.1007</a>.
+URL:
+<a href="https://doi.org/10.1590/S1678-31662012000300008">https://doi.org/10.1590/S1678-31662012000300008</a>.</p>
 <p><a name=bib-Souza_Alvarenga_2004></a><a href="#cite-Souza_Alvarenga_2004">Souza, R. and L.
-Alvarenga</a> (2004). “A Web Sem{^”antica e
-suas contribui{cc{~oes para a ci{^encia da informa{c{~ao. In: _Ci.
-Inf., Bras{’_ilia 33.1, pp. 132-141.</p>
+Alvarenga</a> (2004). “A Web Sem^antica e
+suas contribui{c”c~oes para a ci^encia da informa{cc~ao. In: <em>Ci.
+Inf., Bras'ilia</em> 33.1, pp. 132-141.</p>
+<p><a name=bib-Terra2010></a><a href="#cite-Terra2010">Terra, P. S.</a> (2010). “O
+triunfo da clad'istica: a análise do embate teórico ocorrido na
+sistemática biológica na segunda metade do século xx”. IV Seminário de
+História e Filosofia da Ciência. Bahia: Universidade Estadual de Santa
+Cruz. URL:
+<a href="http://www.uesc.br/eventos/ivseminariohfc/resumos/otriunfodacladistica.pdf">http://www.uesc.br/eventos/ivseminariohfc/resumos/otriunfodacladistica.pdf</a>.</p>
 <p><a name=bib-Vaidya></a><a href="#cite-Vaidya">Vaidya, G., D. J. Lohman, and R.
 Meier</a> (2011). “SequenceMatrix: concatenation software
 for the fast assembly of multi-gene datasets with character set and
