--- a/referências.html
+++ b/referências.html
@@ -381,7 +381,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <h1>Referências<a href="referências.html#referências" class="anchor-section" aria-label="Anchor link to header"></a></h1>
 <p><a name=bib-Almeida_2002></a><a href="#cite-Almeida_2002">Almeida, M.</a> (2002).
 “Uma introdu{c”c~ao ao XML, sua utiliza{cc~ao na Internet e alguns
-conceitos complementares. In: _Ci. Inf., Bras{’_ilia 31.2, pp. 5-13.</p>
+conceitos complementares. In: <em>Ci. Inf., Bras'ilia</em> 31.2, pp. 5-13.</p>
 <p><a
 name=bib-TrendsandPriorities></a><a href="#cite-TrendsandPriorities">Anônimo</a>
 (1974). “Trends, Priorities, and Needs in Systematic and Evolutionary
@@ -499,7 +499,7 @@ eprint:
 <a href="https://academic.oup.com/bioinformatics/article-pdf/19/9/1162/801444/btg131.pdf" class="uri">https://academic.oup.com/bioinformatics/article-pdf/19/9/1162/801444/btg131.pdf</a>.
 URL:
 <a href="https://doi.org/10.1093/bioinformatics/btg131">https://doi.org/10.1093/bioinformatics/btg131</a>.</p>
-<p><a name=bib-ePING></a><a href="#cite-ePING">Programa de Governo Eletr{^onico
+<p><a name=bib-ePING></a><a href="#cite-ePING">Programa de Governo Eletrônico
 Brasileiro</a> (2022). <em>PadrÃµes de Interoperabilidade de
 Governo EletrÃ´nico - ePING - VersÃ£o 2018</em>. [Online; accessed
 13-September-2022]. URL:
@@ -515,7 +515,7 @@ URL:
 <a href="https://doi.org/10.1093/sysbio/42.4.562">https://doi.org/10.1093/sysbio/42.4.562</a>.</p>
 <p><a name=bib-Santos2008></a><a href="#cite-Santos2008">Santos, C. M. D.</a> (2008).
 “Os dinossauros de Hennig: sobre a importância do monofiletismo para a
-sistemática biol'gica”. In: <em>Scientiae Studia [online]</em> 2.6, pp.
+sistemática biológica”. In: <em>Scientiae Studia [online]</em> 2.6, pp.
 179-200. DOI:
 <a href="https://doi.org/10.4000%2Fsociologico.1007">10.4000/sociologico.1007</a>.
 URL:
@@ -568,7 +568,7 @@ Digital. [Online; accessed 12-September-2022]. URL:
 <a href="https://en.wikipedia.org/wiki/Gene_Ontology">https://en.wikipedia.org/wiki/Gene_Ontology</a>.</p>
 <p><a name=bib-wikiInteroperabilidadeSemantica></a><a href="#cite-wikiInteroperabilidadeSemantica">Wikipedia
 contributors</a> (2022e).
-_Interoperabilidade sem{^_antica - Wikipedia,The Free Encyclopedia.
+<em>Interoperabilidade semÃ¢ntica - Wikipedia,The Free Encyclopedia</em>.
 [Online; accessed 12-September-2022]. URL:
 [<a href="https://pt.m.wikipedia.org/wiki/Interoperabilidade\_sem" class="uri">https://pt.m.wikipedia.org/wiki/Interoperabilidade\_sem</a></p>
 <p><a name=bib-wikiTim></a><a href="#cite-wikiTim">Wikipedia contributors</a>
